--- a/FSharpTests/FSharpTests.fsproj
+++ b/FSharpTests/FSharpTests.fsproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="Program.fs" />
     <None Include="App.config" />
+    <None Include="AlgScript.fsx" />
   </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
